--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rnoelle.github.io/react-calculator",
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
